<resources>
    <string name="app_name">You Are What You Eat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Full Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_profile">Neues Profil</string>
    <string name="action_create_profile_submit">Neues Profil Erstellen</string>

    <string name="menu_home">Home</string>
    <string name="menu_recipes">Rezepte</string>
    <string name="menu_overview">Übersicht</string>
    <string name="menu_create_profile">Neues Profil</string>

    <string name="preference_file_key">YouAreWhatYouEatPreferences</string>
    <string name="pref_last_profile_key">YouAreWhatYouEatPreferences_last_profile</string>

    <string name="preference_delete_profile">Profil Löschen</string>
    <string name="preference_select_color">Farbe ändern</string>
    <string name="preference_select_color_text">Farbe wählen</string>
    <string name="preference_add_weight">Körpergewicht aktualisieren</string>

    <string name="home_welcome">Wilkommen</string>
    <string name="home_cals_1">Heute hast du</string>
    <string name="home_cals_2">zu dir genommen</string>
    <string name="home_daylie">Dein Tagesbedarf liegt bei</string>
    <string name="home_add">Mahlzeit hinzufügen</string>
    <string name="home_calc_add_value">Kalorien Wert (kcal)</string>
    <string name="home_drink">Heute getrunken</string>

    <string name="overview_chart_weight_header">Gewichts übersicht</string>
    <string name="overview_chart_calories_header">Kalorien übersicht</string>

    <string-array name="genders">
        <item>Männlich</item>
        <item>Weiblich</item>
    </string-array>
</resources>