<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:background="#ffffff"
        android:id="@+id/home_root">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:id="@+id/linearLayout">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:text="@string/home_welcome"/>
        <TextView
                android:id="@+id/home_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="40sp"
                tools:text="\@nickname"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout2" android:layout_marginTop="40dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp"
                android:text="@string/home_cals_1"/>
        <TextView
                android:id="@+id/home_cals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="80sp"
                android:textStyle="bold"
                android:textColor="#ee0000"
                style="@style/ShadowOverlay"
                tools:text="0 kcal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="23sp"
                android:text="@string/home_cals_2"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginTop="40dp"
            android:id="@+id/linearLayout3">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_daylie"
                android:textAlignment="center"
                android:textSize="20sp"/>
        <TextView
                android:id="@+id/home_daylie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="2000 kcal"
                android:textAlignment="center"
                android:textSize="23sp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_fab"
            android:layout_gravity="end|bottom"
            android:contentDescription="@string/home_add"
            android:src="@drawable/ic_food"
            android:layout_margin="20dp"
            app:fabCustomSize="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>